# trado

./: .gitignore  CMakeLists.txt  makefile
cmake/: configs.cmake  mktests.cmake  ncurses.cmake
console/: CMakeLists.txt
console/include/: tile.hh  window.hh
console/src/: tile.cc  window.cc
console/tests/: tile.cc
